# rude-checker

./: main.py  offensive_words.py  pyproject.toml  replit.nix
static/css/: style.css
static/js/: script.js
templates/: index.html
