[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
googletrans = "3.1.0a0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
